test.yaml
# apiVersion: rbac.authorization.k8s.io/v1
# kind: Role
# metadata:
#   name: pod-reader
#   namespace: default
# rules:
# - apiGroups: [""]
#   resources: ["pods"]
#   verbs: ["list"]

apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
spec:
  replicas: 3  # number of app replicas (pods)
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: cifarm/time-cronjobs  # Use your image URL here
---
# apiVersion: rbac.authorization.k8s.io/v1
# kind: RoleBinding
# metadata:
#   name: read-pods
#   namespace: default
# subjects:
# - kind: ServiceAccount
#   name: default
#   namespace: default
# roleRef:
#   kind: Role
#   name: pod-reader
#   apiGroup: rbac.authorization.k8s.io
