yy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Request-Id: $req_id";
  name: io
  namespace: ingresses
spec:
  ingressClassName: nginx
  rules:
  - host: io.cifarm.dev.starci.net
    http:
      paths:
      - backend:
          service:
            name: websocket-node
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - io.cifarm.dev.starci.net
    secretName: io-tls
